2006-11-10  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* asttools adopted 
	* regressions pass

2006-11-08  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* completed merge with changes from
	  smbase-484-ast-278-elkhound-1036-elsa-2439, a few issues are
	  delayed/ignored for a while, see TODO

2006-11-05  Hendrik Tews  <tews@localhost.localdomain>

	* elsa compiles + non-ocaml regression tests
	* new nullables:
		TranslationUnit.globalScope
		E_stringLit.fullTextNQ
	* regression tests pass!

2006-11-04  Hendrik Tews  <tews@localhost.localdomain>

	* smbase merged
	* ast merged
	* elkhound merged
	* started merge

	* vendor import from oink: smbase-484-ast-278-elkhound-1036-elsa-2439
	* removed files from the vendor import

2006-10-30  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* released version 0.2: elsa-2005.08.22b-olmar-2006.10.30 snapshot

	* small release/snapshot fixes

	* updated documentation

2006-10-27  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* fix ocaml -g 
	* add docclean target
	* prepare doc generation

2006-10-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* Taras Glek's bug fixed: iostream header yields a IN_expr with a
	null expression (nullable IN_expr.e); seems to be a real elsa bug

2006-10-23  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* use iterators for list serialization in hand written
	serialization functions (obey left-to-right order)

	* fixed bug in ocaml serialization (FunctionType)
	* added indentation in check-oast

2006-09-30  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* check-oast adopted; barfs on t0030.cc.oast

2006-09-30  Hendrik Tews  <tews@debian>

	* ast_graph adopted

2006-09-29  Hendrik Tews  <tews@debian>

	* revert stupid ast_graph change

2006-09-29  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* adopted astiter, astiternodes, count-ast, ast_util, ast_graph
	* ast_graph has some problem

	* regressiontests pass !!!
	* changed Enumerator.enumValue to int32
	* added int32 support to astgen

	* changed default array designator value to -1; 