@@ -31,7 +31,8 @@ enum CircularAstType {
   CA_Empty,
   CA_CType,
   CA_Function,
-  CA_Expression
+  CA_Expression,
+  CA_OverloadSet
 };
 
 
@@ -42,12 +43,12 @@ class CircularAstPart {
     CType * type; 		/* tagged CA_CType */
     Function * func;		/* tagged CA_Function */
     Expression * expression;	/* tagged CA_Expression */
+    OverloadSet * overload;	/* tagged CA_OverloadSet */
   } ast;
-  value val;
-  unsigned field;
-  CircularAstPart * next;
+  value val;			/* the reference cell to be updated */
+  CircularAstPart * next;	/* single linked list */
 
-  CircularAstPart();
+  CircularAstPart();		/* (de-)register val as ocaml root */
   ~CircularAstPart();
 };                                          
 
@@ -64,13 +65,24 @@ public:
 };
 
 
-value ref_None_constr(ToOcamlData * data);
-void postpone_circular_CType(ToOcamlData * data, value val, 
-			    unsigned field, CType * type);
-void postpone_circular_Function(ToOcamlData * data, value val, 
-				unsigned field, Function * func);
-void postpone_circular_Expression(ToOcamlData *, value, 
-				  unsigned, Expression *);
+value ref_constr(value elem, ToOcamlData * data);
+
+/* 
+ * The postpone_* functions register an update of an reference cell 
+ * to be performed later, in order to avoid circularities. Bisides the 
+ * ocaml data (in which the deferred circularity is enqued) they also takes
+ * the reference cell to be updated and the ast node that is to 
+ * be serialized later.
+ * The first three functions (ie. CType, Function, Expression) update
+ * an option ref, for them the value val passed must be ref None.
+ * The OverloadSet function updates an list ref. For it val must be ref [].
+ */
+void postpone_circular_CType(ToOcamlData * data, value val, CType * type);
+void postpone_circular_Function(ToOcamlData * data, value val, Function * func);
+void postpone_circular_Expression(ToOcamlData *, value, Expression *);
+void postpone_circular_OverloadSet(ToOcamlData *, value, OverloadSet *);
+
+// serialize all the deferred circularities enqued in data
 void finish_circular_pointers(ToOcamlData * data);
 
 
